## Makefile.am -- Process this file with automake to produce Makefile.in

MAINTAINERCLEANFILES = Makefile.in

sysconfdir	:= @sysconfdir@/M-ICE

dist_sysconf_DATA =	bufferdaemon-aa.conf \
			bufferdaemon-mngmthost.conf \
			bufferdaemon-rawlogdb.conf \
			bufferdaemon.conf \
			dataforwarder.conf \
			match_file_aa_regex.txt \
			mice_mod_dec_idmef_twofish.conf \
			mice_mod_dec_logformat_twofish.conf \
			mice_mod_flt_regex.conf \
			mice_mod_pop_aa_regex.conf \
			mice_mod_fmt_simple.conf \
			mice_mod_fmt_enhanced.conf \
			mice_mod_pop_act_generic.conf \
			mice_mod_pop_mysql.conf \
			mice_mod_rct_dummy.conf \
			mice_mod_psd_empty.conf \
			mice_mod_psd_symmetric.conf \
			reactiondaemon.conf \
			rid_1_write_to_syslog.conf \
			rid_2_send_to_alert_db.conf \
			rid_3_save_to_file.conf \
			rid_4_countermeasure.conf
