## Makefile.am -- Process this file with automake to produce Makefile.in

MAINTAINERCLEANFILES = Makefile.in

sysconfdir	:= @sysconfdir@/init.d/

dist_sysconf_DATA =	MICE-bufferdaemon \
			MICE-bufferdaemon-aa \
			MICE-bufferdaemon-mngmthost \
			MICE-bufferdaemon-rawlogdb \
			MICE-dataforwarder \
			MICE-reactiondaemon \
			MICE-rid_1_write_to_syslog \
			MICE-rid_2_send_to_alert_db \
			MICE-rid_3_save_to_file \
			MICE-rid_4_countermeasure