## Makefile.am -- Process this file with automake to produce Makefile.in

SUBDIRS = . rid_1_write_to_syslog rid_2_send_to_alert_db \
            rid_3_save_to_file rid_4_countermeasure


MAINTAINERCLEANFILES = Makefile.in aclocal.m4 acinclude.m4 \
        config.guess config.sub configure \
        install-sh ltmain.sh missing mkinstalldirs ylwrap \
        compile config.log config.status depcomp *~
