## Makefile.am -- Process this file with automake to produce Makefile.in

SUBDIRS = . pseudonymizer pseudo_key_gen

MAINTAINERCLEANFILES = Makefile.in aclocal.m4 acinclude.m4 \
        config.guess config.sub configure \
        install-sh ltmain.sh missing mkinstalldirs ylwrap \
        compile config.log config.status depcomp *~
