## Makefile.am -- Process this file with automake to produce Makefile.in

SUBDIRS = . aa_regex act_generic mysql syslog

MAINTAINERCLEANFILES = Makefile.in aclocal.m4 acinclude.m4 \
        config.guess config.sub configure \
        install-sh ltmain.sh missing mkinstalldirs ylwrap \
        compile config.log config.status depcomp *~
