## Process this file with automake to produce Makefile.in

lib_LTLIBRARIES = mice_mod_fmt_enhanced.la

mice_mod_fmt_enhanced_la_SOURCES	= mice_mod_fmt_enhanced.c parsecfg.c checksum.c
mice_mod_fmt_enhanced_la_LIBADD		= -lmice -lmice_parse
mice_mod_fmt_enhanced_la_LDFLAGS	= -module -version-info 1:0:0

