## Process this file with automake to produce Makefile.in

lib_LTLIBRARIES = mice_mod_pop_aa_regex.la

mice_mod_pop_aa_regex_la_SOURCES = mice_mod_pop_aa_regex.c checksum.c parsecfg.c
mice_mod_pop_aa_regex_la_LIBADD = -lxml2 -lntp -lidmef -lmice
mice_mod_pop_aa_regex_la_LDFLAGS = -module -version-info 1:0:0

noinst_HEADERS = mice_mod_pop_aa_regex.h
