## Process this file with automake to produce Makefile.in

lib_LTLIBRARIES = mice_mod_psd_empty.la

mice_mod_psd_empty_la_SOURCES = mice_mod_psd_empty.c parsecfg.c
mice_mod_psd_empty_la_LIBADD = -lmice
mice_mod_psd_empty_la_LDFLAGS = -module -version-info 1:0:0

noinst_HEADERS = mice_mod_psd_empty.h
