## Process this file with automake to produce Makefile.in

lib_LTLIBRARIES = mice_mod_psd_symmetric.la

mice_mod_psd_symmetric_la_SOURCES = mice_mod_psd_symmetric.c parsecfg.c
mice_mod_psd_symmetric_la_LIBADD  = -lmice -lmice_pseudo
mice_mod_psd_symmetric_la_LDFLAGS = -module -version-info 1:0:0

noinst_HEADERS = mice_mod_psd_symmetric.h
