## Process this file with automake to produce Makefile.in

lib_LTLIBRARIES = mice_mod_rct_dummy.la

mice_mod_rct_dummy_la_SOURCES = mice_mod_rct_dummy.c parsecfg.c
mice_mod_rct_dummy_la_LIBADD = -lmice
mice_mod_rct_dummy_la_LDFLAGS = -module -version-info 1:0:0

noinst_HEADERS = mice_mod_rct_dummy.h
